# compression

./: .clang-format  .clang-tidy  .gitignore
arithmetic/: arithmetic.py  file.txt
huffman/: CMakeLists.txt  README.md
huffman/include/: huffmanlib.hpp
huffman/src/: main.cpp
huffman/src/lib/: huffmanlib.cpp
